manifests/dev/opensearch-dashboards/Namespace-opensearch-dashboards.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: opensearch-dashboards
