manifests/dev/opensearch-dashboards/Deployment-opensearch-dashboards.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch-dashboards
  namespace: opensearch-dashboards
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: opensearch-dashboards
  template:
    metadata:
      labels:
        app.kubernetes.io/name: opensearch-dashboards
    spec:
      containers:
        - env:
            - name: OPENSEARCH_HOSTS
              value: '["http://ditto-relay-opensearch.ditto-relay:9200"]'
            - name: DISABLE_SECURITY_DASHBOARDS_PLUGIN
              value: "true"
          image: opensearchproject/opensearch-dashboards:2.19.6
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/status
              port: 5601
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
          name: opensearch-dashboards
          ports:
            - containerPort: 5601
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 6
            httpGet:
              path: /api/status
              port: 5601
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 512Mi
