manifests/dev/opensearch-dashboards/Service-opensearch-dashboards.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch-dashboards
  namespace: opensearch-dashboards
spec:
  ports:
    - name: http
      port: 5601
      protocol: TCP
      targetPort: 5601
  selector:
    app.kubernetes.io/name: opensearch-dashboards
